Align buttons fix site width

--- a/src/app/rsvp/rsvp.component.scss
+++ b/src/app/rsvp/rsvp.component.scss
@@ -26,7 +26,6 @@ h1, h2, h3 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
   }
 
   .header {
@@ -60,6 +59,38 @@ h1, h2, h3 {
         border-radius: 5px; 
         cursor: pointer;
     }
+
+    .container {
+      display: flex;
+      align-items: center;
+
+      gap: 10px; /* Space between elements */
+
+      .text {
+        padding-top: 15px; /* Ke entse nonsonso feel. To fix*/
+        font-size: 16px;
+      }
+      
+      .accept {
+        background-color: black;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        cursor: pointer;
+        align-self: center;
+      }
+      
+      .decline {
+        background-color: white;
+        color: black;
+        border: 2px solid black;
+        padding: 10px 20px;
+        cursor: pointer;
+        align-self: center;
+      }
+    }
+    
+
   }
 
   .search-input {
@@ -98,6 +129,7 @@ h1, h2, h3 {
     margin-top: 20px; 
     line-height: 1.5;
   }
+
 
   /* Mobile Styles */
   @media (max-width: 768px) {
